# uni-mol-qsar-tutorial

./: .gitignore  LANDSCAPE.md  LICENSE  PREMISES.md  README.md  pyproject.toml  requirements.txt
.omc/: cost-log.csv
data/: README.md
docs/: BACKGROUND.md  EXPECTED_OUTPUTS.md  EXPLAINABILITY_SCOPE.md
examples/: cleanlab_audit.py  run_full_pipeline.py  run_split_comparison.py
notebooks/: 01_data_and_baseline.ipynb  02_unimol_xgb_shap.ipynb  03_sae_counterfactual_report.ipynb
reports/: 20260527_cleanlab_audit.json  20260527_cleanlab_flagged.csv  20260527_split-compare_ecfp4.html  20260527_split-compare_ecfp4.json  20260528_braf-full_ecfp4.html  20260528_braf-full_ecfp4.json  20260528_braf-stratified_ecfp4.html  20260528_braf-stratified_ecfp4.json  20260528_coadd-baseline_ecfp4.html  20260528_coadd-baseline_ecfp4.json  20260529_braf_boosted_ecfp4.html  20260529_braf_boosted_ecfp4.json  20260529_braf_mmp_grid.json  20260529_braf_mmp_mined.json  20260529_braf_mmp_mined_mcs.json  20260529_braf_time_sweep.json  20260529_braf_unimol_minimal.json  20260529_braf_unimol_splits.json  20260529_coadd_unimol_repro.json  20260529_egfr_ecfp4.html  20260529_egfr_ecfp4.json  20260529_egfr_external_ecfp4.html  20260529_egfr_external_ecfp4.json  20260529_egfr_time_sweep.json  20260529_h7_braf_finetune.json  20260529_jak2_ecfp4.html  20260529_jak2_ecfp4.json  20260529_jak2_external_ecfp4.html  20260529_jak2_external_ecfp4.json  20260529_jak2_time_sweep.json  20260529_sae_monosem_braf_ecfp4.json  20260529_split-compare_ecfp4.html  20260529_split-compare_ecfp4.json  20260529_split-compare_unimol.html  20260529_split-compare_unimol.json  braf_h7_finetune.json  (+7 more)
(+45 files in other folders)
