[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qsar-tutorial"
version = "0.1.0"
description = "Interpretable QSAR tutorial: Uni-Mol + XGBoost + SHAP + SAE + MMP counterfactual on CO-ADD P. aeruginosa public data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kyuwon Shim" }]
keywords = ["qsar", "drug-discovery", "uni-mol", "shap", "sparse-autoencoder", "interpretability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "scipy>=1.11",
    "rdkit>=2023.9",
    "shap>=0.44",
    "torch>=2.0",
    "matplotlib>=3.7",
    "plotly>=5.18",
    "jinja2>=3.1",
    "requests>=2.31",
    "tqdm>=4.66",
]

[project.optional-dependencies]
notebooks = ["jupyter>=1.0", "ipykernel>=6.25"]
dev = ["pytest>=7.4", "ruff>=0.1"]

[project.urls]
Documentation = "https://github.com/kyuwon-shim-ARL/uni-mol-qsar-tutorial/blob/main/README.md"
Source = "https://github.com/kyuwon-shim-ARL/uni-mol-qsar-tutorial"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
